fix: h1 and title sizes on mobile width and add Inter sans serif

--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -7,7 +7,7 @@
   position: relative;
 
   @media (max-width: 768px) {
-    font-size: 1.3rem;
+    font-size: 2rem;
   }
 }
 
